# repo-wizard

./: .gitignore  .prettierignore  .release-please-manifest.json  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  turbo.json  vite.config.ts
.changeset/: README.md  config-optimization.md  fix-release-notes-extraction.md  many-tires-switch.md  test-migration.md
.github/actions/release-please/: action.yml  run.js
.github/scripts/: run-release-please.js
.github/workflows/: build.yml  ci.yml  publish.yml  release-changesets.yml  release-desktop.yml  release-please.yml  release.yml
apps/desktop/: .gitignore  CHANGELOG.md  README.md  RELEASE_PIPELINE_SMOKE.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/meta-prompts/: architect.md  code-optimizing.md  engineer.md
apps/desktop/src/: App.tsx  bindings.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  state.rs
apps/desktop/src-tauri/tests/: patch_service.rs  review_service.rs  review_service_test.rs
apps/desktop/src/components/: Header.tsx  Layout.tsx  TabbedPanel.tsx
apps/desktop/src/hooks/: useMetaPromptManager.ts  usePromptGenerator.ts  useReviewSession.ts  (+2 more)
apps/web/: CHANGELOG.md  package.json  tsconfig.json
docs/: CONTRIBUTING.zh-CN.md  README.zh-CN.md
public/meta-prompts/: code-reviewer.md  engineer.md
scripts/: extract-latest-changelog.mjs  extract-latest-changelog.test.mjs  release.cjs  release.mjs  sync-version.js  version-sync.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: fs_utils.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: cli_utils.rs  fs_utils.rs  git_utils.rs  mod.rs  parser.rs  patcher.rs  path_utils.rs  pty_utils.rs
src-tauri/src/services/: cli_service.rs  file_search_service.rs  git_service.rs  mod.rs  project_service.rs  pty_service.rs  review_service.rs  watcher_service.rs
src-tauri/src/types/: index.ts  mod.rs
src/components/: Header.tsx  Layout.tsx  MainPanel.tsx  TabbedPanel.tsx
src/components/common/: Button.tsx  Checkbox.tsx  CommandRunnerModal.tsx  ContextMenu.tsx  DropdownMenu.tsx  HorizontalScroller.tsx  Input.tsx  ModalDialog.tsx  ResponsiveButtonGroup.tsx  SegmentedControl.tsx  SettingsModal.tsx  ShortenedPath.tsx  Textarea.tsx  ToggleSwitch.tsx  Tooltip.tsx
src/components/editor/: CodeEditor.tsx  DiffEditor.tsx
src/components/history/: HistoryPanel.tsx  PromptHistoryDetailModal.tsx  PromptHistoryPanel.tsx
src/components/prompt/: MetaPromptSelector.tsx  MetaPromptsManagerModal.tsx  PromptComposer.tsx
src/components/review/: ApplyChangesPanel.tsx  ChangeList.tsx  ReviewPanel.tsx
src/components/viewer/: FallbackViewer.tsx  FileViewer.tsx  ImageViewer.tsx  SvgViewer.tsx  VideoViewer.tsx
src/components/workspace/: FileSearchModal.tsx  FileTree.tsx  FileTypeIcon.tsx  RecentProjectsModal.tsx  SelectedFilesPanel.tsx  WorkspaceSidebar.tsx
src/hooks/: useKeyboardShortcuts.ts  useMetaPromptManager.ts  usePromptGenerator.ts  useReviewSession.ts  useUndo.ts
src/lib/: diff_parser.ts  error.ts  errorHandler.ts  iconManifestConfig.ts  iconService.ts  language_service.ts  mime_types.ts  path_utils.ts  prompt_builder.ts  tauri_api.ts  token_estimator.ts
src/services/: fileSearchService.ts  projectService.ts  reviewService.ts  tauriApi.ts
src/store/: commandRunnerStore.ts  composerStore.ts  contextMenuStore.ts  dialogStore.ts  fileSearchStore.ts  historyStore.ts  projectStore.ts  promptHistoryStore.ts  promptStore.ts  reviewStore.ts  settingsStore.ts  tooltipStore.ts  updateStore.ts  workspaceStore.ts
src/styles/: global.css
src/types/: index.ts
(+104 files in other folders)
