[package]
name = "repo-wizard"
version = "1.8.0"
description = "A code refactoring staging area to safely and efficiently apply LLM-suggested code changes."
authors = ["fanzzzd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "repo_wizard"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.21", features = [] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-clipboard-manager = "2"
uuid = { version = "1.17.0", features = ["v4"] }
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
base64 = "0.22.1"
crossbeam-channel = "0.5"
tauri-plugin-os = "2"
once_cell = "1.19.0"
portable-pty = "0.9.0"
nom = "8.0.0"
notify = { version = "8.1.0", features = ["serde"] }
notify-debouncer-full = "0.5.0"
ignore = { git = "https://github.com/Fanzzzd/ripgrep.git" }
tempfile = "3.10.1"
lru = "0.16.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
